# Poulailler

./: .gitignore  CMakeLists.txt  README.md  start.sh
backend/: CMakeLists.txt
backend/include/: mc_api_http.h  mc_api_unix.h  mc_config.h  mc_db.h  mc_error.h  mc_fetch_rest.h  mc_fetch_rss.h  mc_fetch_ws.h  mc_log.h  mc_models.h  mc_scheduler.h
backend/src/: api_http.c  api_unix.c  config.c  db.c  error.c  fetch_rest.c  fetch_rss.c  fetch_ws.c  log.c  main.c  models.c  scheduler.c
clients/tui/: CMakeLists.txt
clients/tui/src/: client.c  client.h  main.c  ui.c  ui.h  ui_panels.c  ui_panels.h
clients/web/: index.html
config_example/: config.toml
